tests/ui/lang-items/start_lang_item_with_target_feature.stderr
error: `#[target_feature]` cannot be applied to a lang item function
  --> $DIR/start_lang_item_with_target_feature.rs:20:1
   |
LL |   #[target_feature(enable = "avx2")]
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL | / fn start<T>(_main: fn() -> T, _argc: isize, _argv: *const *const u8, _sigpipe: u8) -> isize {
LL | |     0
LL | | }
   | |_- lang item function is not allowed to have `#[target_feature]`

error: aborting due to 1 previous error

